#71 fix integration tests
